# programming-5-sem

./: README.md
3LR/: README.md  pyproject.toml
3LR/src/simple_openweather_client/: client.py  init.py
3LR/tests/: test_client.py
7lR/counter-deploy/backend/: app.py  requirements.txt
7lR/counter-deploy/tests/: conftest.py  test_counter.py  test_simple.py
P5LR1/: Script.py  readme.md
P5LR1/Server/: remotemodule.py
P5LR1/Server/mypackage/: __init__.py  submodule.py
P5LR2/: README.md  fib_iterator.py  gen_fib.py  test_fib.py
P5LR4/: Dockerfile  README.md  crud.py  database.py  docker-compose.yml  models.py  schemas.py
P5LR4/app/: main.py
P5LR5/: README.md  docker-compose.yml
P5LR5/glossary_service/: Dockerfile  requirements.txt  server.py
P5LR5/protobufs/: glossary.proto
P5LR5/web_gateway/: Dockerfile  app.py  requirements.txt
P5LR5/web_gateway/templates/: index.html
P5LR6/: README.md  app.py  config.py  requirements.txt  test_client.py
P5LR6/static/: style.css
P5LR6/templates/: index.html
